# carcinization-clicker

./: Cargo.toml  README
game_def/achievements/pair_programming/: achievement.dyon  achievement.json5  achievement.rhai
game_def/buildings/programmer/: building.json5
game_def/upgrades/copilot/: upgrade.json5
src/: lib.rs  main.rs
src/compiled/: achievement.rs  building.rs  game.rs  mod.rs  upgrade.rs
src/def/: copilot.rs  mod.rs  pair_programming.rs  programmer.rs
