[package]
name = "carcinization-clicker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.144", features = ["derive"]}
chrono = {version = "0.4.22", features = ["serde"]}
include_dir = "0.7.2"
json5 = "0.4.1"
rhai = {version = "1.10.0", features = ["sync"]}
eframe = "0.19.0"
dirs = "4.0.0"
num = {version = "*", features = ["serde"]}